--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SMTP_HOST=smtp.gmail.com    
 SMTP_PORT=587
-SMTP_USERNAME=ashikshettyc@gmail.com
-SMTP_PASSWORD=qkizljnyfdkagcah
-SMTP_FROM_EMAIL=ashikshettyc@gmail.com
+SMTP_USERNAME=
+SMTP_PASSWORD=
+SMTP_FROM_EMAIL=
 SMTP_FROM_NAME=Admin
